hosting/kube-local/test-ingress.yml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"example-ingress","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"foo-service","servicePort":5678},"path":"/foo"},{"backend":{"serviceName":"bar-service","servicePort":5678},"path":"/bar"}]}}]}}
      nginx.ingress.kubernetes.io/rewrite-target: /$2
    creationTimestamp: "2021-05-22T02:19:06Z"
    name: example-ingress
    namespace: default
    resourceVersion: "8000"
    uid: 45292038-ceda-4618-b798-fb10f1c20bc2
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: foo-service
              port:
                number: 5678
          path: /foo(/|$)(.*)
          pathType: ImplementationSpecific
        - backend:
            service:
              name: bar-service
              port:
                number: 5678
          path: /bar(/|$)(.*)
          pathType: ImplementationSpecific
        - backend:
            service:
              name: yournamespaceapi-service
              port:
                number: 80
          path: /aaa(/|$)(.*)
          pathType: ImplementationSpecific
        - backend:
            service:
              name: yournamespaceapi2-service
              port:
                number: 8002
          path: /bbb(/|$)(.*)
          pathType: ImplementationSpecific
        - backend:
            service:
              name: yournamespaceapi3-service
              port:
                number: 8003
          path: /ccc(/|$)(.*)
          pathType: ImplementationSpecific
        - backend:
            service:
              name: yournamespaceapi4-service
              port:
                number: 8004
          path: /ddd(/|$)(.*)
          pathType: ImplementationSpecific
  status:
    loadBalancer:
      ingress:
      - hostname: localhost
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
